--- a/Sass/layout/_contactpage.scss
+++ b/Sass/layout/_contactpage.scss
@@ -23,8 +23,14 @@
 
 .linkedin {
     width: 50px;
-    // margin-top: 100px;
     margin-left: 48vw;
+}
+
+.linkedinText{
+    margin-left: 46.8vw;
+    text-decoration: none;
+    color: white;
+    font-size: large;
 }
 
 .CV {
