--- a/Sass/layout/_homelayout.scss
+++ b/Sass/layout/_homelayout.scss
@@ -83,12 +83,26 @@
     }
 }
 
+.MC,
+.PJC,
+.AMC,
+.CCVC {
+    border-radius: $cornerRadius;
+    overflow: hidden;
+    transition: $animTime;
+    &:hover{
+        transition:$animTime;
+        transform: scale(1.05);
+    }
+}
+
 .MusicImg,
 .ProjectImg,
 .ABMImg,
 .CCVCImage {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1200px) {
@@ -97,5 +111,4 @@
         grid-template-columns: 47.5%;
         grid-template-rows: repeat(4, auto);
     }
-
 }
