--- a/Sass/main.css
+++ b/Sass/main.css
@@ -27,10 +27,14 @@
   text-decoration: none;
   color: inherit;
   font-size: larger;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .header-container a:hover {
   color: #00a2ff;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .namehome {
@@ -96,10 +100,10 @@
 }
 
 .Menu:target {
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
   -webkit-transform: translateY(15%);
           transform: translateY(15%);
 }
@@ -110,6 +114,14 @@
   font-size: x-large;
   text-decoration: none;
   z-index: 100;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.Menu a:hover {
+  color: #272525;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
 }
 
 .Close {
@@ -127,6 +139,7 @@
   .music,
   .contact {
     opacity: 0;
+    pointer-events: none;
   }
   .Hamburger {
     opacity: 1;
@@ -377,10 +390,10 @@
 }
 
 .questionPanel:target {
-  -webkit-transition: -webkit-transform .2s;
-  transition: -webkit-transform .2s;
-  transition: transform .2s;
-  transition: transform .2s, -webkit-transform .2s;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
   -webkit-transform: translateY(-20%);
           transform: translateY(-20%);
 }
@@ -403,7 +416,9 @@
       -ms-flex-align: center;
           align-items: center;
   margin-top: 1.2vh;
-  margin-bottom: calc(100% / (16/9));
+  margin-bottom: calc(100% / (16 / 9));
+  border-radius: 0.5em;
+  overflow: hidden;
 }
 
 .TUE,
@@ -438,8 +453,8 @@
   background: rgba(255, 255, 255, 0.607);
   color: #f1f1f199;
   width: 95%;
-  -webkit-transition: .6s ease;
-  transition: .6s ease;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
   opacity: 0;
   color: black;
   font-size: 20px;
@@ -618,6 +633,14 @@
     -ms-grid-column: 2;
     grid-column: 2;
   }
+  .GameOne,
+  .GameTwo,
+  .GameThree,
+  .GameFour,
+  .GameFive,
+  .GameSix {
+    margin-left: 6vw;
+  }
 }
 
 /*#endregion*/
@@ -664,12 +687,20 @@
     grid-column: 1;
   }
   .questionPanel:target {
-    -webkit-transition: -webkit-transform .2s;
-    transition: -webkit-transform .2s;
-    transition: transform .2s;
-    transition: transform .2s, -webkit-transform .2s;
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
+    transition: transform 0.2s, -webkit-transform 0.2s;
     -webkit-transform: translateY(-5%);
             transform: translateY(-5%);
+  }
+  .GameOne,
+  .GameTwo,
+  .GameThree,
+  .GameFour,
+  .GameFive,
+  .GameSix {
+    margin-left: 5vw;
   }
 }
 
@@ -943,12 +974,34 @@
   font-size: x-large;
 }
 
+.MC,
+.PJC,
+.AMC,
+.CCVC {
+  border-radius: 0.5em;
+  overflow: hidden;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.MC:hover,
+.PJC:hover,
+.AMC:hover,
+.CCVC:hover {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
 .MusicImg,
 .ProjectImg,
 .ABMImg,
 .CCVCImage {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media screen and (max-width: 1200px) {
