--- a/Sass/layout/_musicpage.scss
+++ b/Sass/layout/_musicpage.scss
@@ -50,6 +50,8 @@
     margin-top: 10px;
     width: 100%;
     height: 100%;
+    border-radius: $cornerRadius;
+    overflow: hidden;
 }
 
 .GameTrackOne {
