--- a/Sass/main.css
+++ b/Sass/main.css
@@ -147,16 +147,11 @@
 }
 
 .aboutmecontainer > *:not(.Selfie, .imagecontainer) {
-  display: -ms-grid;
-  display: grid;
+  display: block;
   margin-top: 15vh;
   margin-left: 20%;
   width: 60vw;
   height: 70vh;
-  -ms-grid-columns: auto;
-      grid-template-columns: auto;
-  -ms-grid-rows: 5% 1fr;
-      grid-template-rows: 5% 1fr;
 }
 
 .imagecontainer {
@@ -200,25 +195,14 @@
   font-size: xx-large;
   width: 100%;
   text-align: center;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 4;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
 }
 
 .aboutmetext {
   color: white;
   text-align: left;
   font-size: large;
-  -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 4;
-  -ms-grid-row: 2;
-      grid-row-start: 2;
   width: 80%;
   margin: auto;
-  margin-top: 5vh;
 }
 
 .aboutmetext a {
@@ -245,7 +229,7 @@
 
 @media screen and (max-width: 500px) {
   .aboutmetext {
-    margin-top: 10vh;
+    margin-top: 5vh;
   }
 }
 
@@ -592,6 +576,13 @@
 @media screen and (max-width: 900px) {
   .question {
     opacity: 1;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
+  }
+  .question:hover {
+    color: black;
+    -webkit-transition: 0.2s;
+    transition: 0.2s;
   }
   .GamesContainer {
     height: auto;
@@ -764,6 +755,8 @@
   margin-top: 10px;
   width: 100%;
   height: 100%;
+  border-radius: 0.5em;
+  overflow: hidden;
 }
 
 .GameTrackOne {
@@ -926,6 +919,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: black;
 }
 
 .PJC span {
@@ -943,6 +937,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: #616e75;
 }
 
 .MC span {
@@ -994,6 +989,13 @@
           transform: scale(1.05);
 }
 
+.MC:hover span,
+.PJC:hover span,
+.AMC:hover span,
+.CCVC:hover span {
+  text-decoration: underline;
+}
+
 .MusicImg,
 .ProjectImg,
 .ABMImg,
@@ -1002,6 +1004,17 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.MusicImg:hover,
+.ProjectImg:hover,
+.ABMImg:hover,
+.CCVCImage:hover {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  opacity: 0.25;
 }
 
 @media screen and (max-width: 1200px) {
