--- a/Sass/layout/_aboutme.scss
+++ b/Sass/layout/_aboutme.scss
@@ -1,11 +1,9 @@
 .aboutmecontainer>*:not(.Selfie, .imagecontainer) {
-    display: grid;
+    display: block;
     margin-top: 15vh;
     margin-left: 20%;
     width: 60vw;
     height: 70vh;
-    grid-template-columns: auto;
-    grid-template-rows: 5% 1fr;
 }
 
 .imagecontainer {
@@ -42,21 +40,14 @@
     font-size: xx-large;
     width: 100%;
     text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 1;
 }
 
 .aboutmetext {
     color: white;
     text-align: left;
     font-size: large;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2;
     width: 80%;
     margin: auto;
-    margin-top: 5vh;
 
     a {
         text-decoration: none;
@@ -95,6 +86,6 @@
 @media screen and (max-width: 500px) {
 
     .aboutmetext {
-        margin-top: 10vh;
+        margin-top: 5vh;
     }
 }
