--- a/Sass/utilities/_variables.scss
+++ b/Sass/utilities/_variables.scss
@@ -5,6 +5,12 @@ $CalmBlue: #00a2ff;
 $CustomGrey: #616e75;
 $PopupBackground: rgba(109, 98, 98, 0.485);
 
+$primary: #00a2ff;
+$secondary: #008cb3;
+$tertiary: #bff1ff;
+$quaternary: #ff7200;
+$quinary: #b35000;
+
 $cornerRadius: 0.5em;
 
 $animTime:0.2s;
