--- a/Sass/layout/_homelayout.scss
+++ b/Sass/layout/_homelayout.scss
@@ -1,4 +1,6 @@
 $gap-size:2em;
+$windowHeight:90vh;
+$windowWidth:90vw;
 
 .homeContainer{
     padding-top:75px;
@@ -6,13 +8,14 @@ $gap-size:2em;
     height: 120em;
     display:flex;
     flex-direction: column;
+    gap: $gap-size;
 }
 
 .introContainer{
     --introHeight: 20em;
     //height: var(--introHeight);
-    height: 90vh;
-    width: 120em; 
+    height: $windowHeight;
+    width: $windowWidth; 
     display: flex;
     flex-direction: row-reverse;
     background-color:$primary;
@@ -35,7 +38,7 @@ $gap-size:2em;
 .introTextContainer{
     display: flex;
     flex-direction: column;
-    padding-top: 20vh;
+    padding-top: 5vh;
     padding-right: $gap-size;
     padding-left: $gap-size;
 
@@ -46,12 +49,14 @@ $gap-size:2em;
 
     .introSubHeader{
         color: white;
-        font-size: 3em;
+        font-size: 2em;
+        margin-top: -5vh;
     }
 
     .aboutMeButton{
         align-self: center;
         justify-self: center;
+        margin-top: 5vh;
         background-color: $quaternary;
         font-size: large;
         color: white;
@@ -77,8 +82,8 @@ $gap-size:2em;
 
         &:hover{
             cursor: pointer;
-                background-color: lightblue;
-                border: 0.1em solid black;
+            background-color: lightblue;
+            border: 0.1em solid black;
 
             &>*{
                 color: black;
@@ -89,14 +94,47 @@ $gap-size:2em;
 
 
 .projectsContainer{
-    height: 90vh;
-    width: 120em; 
+    height: $windowHeight;
+    width: $windowWidth; 
+    padding-top: $gap-size;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     background-color:$secondary;
     justify-content: center;
     align-content:center;
     align-self: center;
-    margin-top: $gap-size;
     color: white;
+
+    &>*{
+        align-self:center;
+    }
+}
+
+.projectCarousel{
+
+    background-color: red;
+    display: block;
+}
+
+.prog{
+    height: 80%;
+    width: 80%;
+    display: flex;
+    flex-direction:column;
+    text-decoration: none;
+
+    &>*{
+        align-self:center;
+    }
+
+    .TTD_T{
+        color: white;
+        font-size: 1.5em;
+        display: flex;
+        flex-direction: row;
+
+        .material-icons{
+            color: black;
+        }
+    }
 }
