--- a/Sass/main.css
+++ b/Sass/main.css
@@ -638,12 +638,13 @@
   padding-top: 75px;
   height: 120em;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  gap: 2em; }
 
 .introContainer {
   --introHeight: 20em;
   height: 90vh;
-  width: 120em;
+  width: 90vw;
   display: flex;
   flex-direction: row-reverse;
   background-color: #00a2ff;
@@ -662,7 +663,7 @@
 .introTextContainer {
   display: flex;
   flex-direction: column;
-  padding-top: 20vh;
+  padding-top: 5vh;
   padding-right: 2em;
   padding-left: 2em; }
 
@@ -672,11 +673,13 @@
 
 .introTextContainer .introSubHeader {
   color: white;
-  font-size: 3em; }
+  font-size: 2em;
+  margin-top: -5vh; }
 
 .introTextContainer .aboutMeButton {
   align-self: center;
   justify-self: center;
+  margin-top: 5vh;
   background-color: #ff7200;
   font-size: large;
   color: white;
@@ -709,15 +712,41 @@
 
 .projectsContainer {
   height: 90vh;
-  width: 120em;
+  width: 90vw;
+  padding-top: 2em;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
   background-color: #008cb3;
   justify-content: center;
   align-content: center;
   align-self: center;
-  margin-top: 2em;
   color: white; }
+
+.projectsContainer > * {
+  align-self: center; }
+
+.projectCarousel {
+  background-color: red;
+  display: block; }
+
+.prog {
+  height: 80%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none; }
+
+.prog > * {
+  align-self: center; }
+
+.prog .TTD_T {
+  color: white;
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: row; }
+
+.prog .TTD_T .material-icons {
+  color: black; }
 
 html,
 body {
